8232861: (fc) FileChannel.force fails on WebDAV file systems (macOS)